Fix Bugs -Fix listview black color bug -Remove scrollbar background -Make description field wrap text so that it will not get cut off -Add padding to the result display text area -Make result display wrap text so that it is vertically scrollable and not horizontally scrollable

--- a/src/main/resources/view/Main.css
+++ b/src/main/resources/view/Main.css
@@ -52,6 +52,7 @@
     -fx-background-radius: 15;
     -fx-border-radius: 15;
     -fx-border-color: transparent;
+    -fx-padding: 5px;
 }
 
 .text-area .scroll-pane {
@@ -227,7 +228,7 @@
 
 /*Scroll Bar*/
 .scroll-bar {
-    -fx-background-color: white;
+    -fx-background-color: transparent;
 }
 
 .scroll-bar .thumb {
